# aoc

./: .gitignore  Cargo.toml
aoc2019/intcomputer/: Cargo.toml
aoc2019/intcomputer/src/: computer.rs  lib.rs  main.rs  reader.rs  writer.rs
aoc2019/intcomputer/tests/: day2_tests.rs  day5_tests.rs  day7_tests.rs  day9_tests.rs
aoc2020/: Cargo.toml
aoc2021/src/: day1.rs  day2.rs  day3.rs
aoc2022/day1/src/: main.rs
aoc2022/day2/src/: main.rs
aoc2022/day3/src/: main.rs
aoc2023/day1/src/: main.rs
aoc2023/day10/src/: main.rs
aoc2023/day11/src/: main.rs
aoc2023/day12/src/: main.rs
aoc2023/day13/: Cargo.toml
aoc2023/day13/src/: main.rs
aoc2023/day14/src/: main.rs
aoc2023/day19/: :w
aoc2023/day21/: Cargo.toml
aoc2023/day22/: Cargo.toml
aoc2023/day23/: Cargo.toml
aoc2023/day24/: Cargo.toml
aoc2023/day25/: Cargo.toml  graph.dot
aoc2024/aocaml2024/: dune-project
aoc2024/day12/: Cargo.toml
aoc2024/day14/: Cargo.toml
aoc2024/day15/: Cargo.toml
aoc2024/day16/: Cargo.toml
aoc2024/day18/: Cargo.toml
aoc2024/day20/: Cargo.toml
aoc2024/day21/: Cargo.toml
aoc2024/day24/: Cargo.toml  graph.dot  modified.dot  unchanged.dot
aoc2024/day6/: Cargo.toml
aoc2024/ocaml2024/: dune-project
aoc2025/elixir2025/: .gitignore  README.md  dantzig-integer-vars.patch  mix.exs
elixir/klaus/: .gitignore  README.md  mix.exs
elixir/klaus_example/: .gitignore  README.md  mix.exs
santa_claws/: Cargo.toml
santa_claws/src/: coord.rs  grid.rs  lib.rs
santas_little_helpers/: Cargo.toml
santas_little_helpers/src/: coord.rs  directions.rs  grid.rs
(+86 files in other folders)
