[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Sam Youatt <sdyouatt@btinternet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "0.4.0"
chrono = "0.4.0"
itertools = "0.10.1"
multimap = "0.8.3"
peg = "0.7.0"
regex = "1.5.4"
ring-algorithm = "0.4.0"
test-case = "1.2.0"
